# malt_core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  component.cpp  entity.cpp  malt_core-config.cmake  module.json
include/malt/: comp_range.hpp  component.hpp  component_mgr.hpp  component_mgr_impl.hpp  component_traits.hpp  debug.hpp  engine.hpp  engine_defs.hpp  engine_impl.hpp  entity.hpp  error.hpp  game.hpp  game_impl.hpp  list.hpp  malt_fwd.hpp  malt_reflect.hpp  malt_reflect_impl.hpp  message.hpp  meta.hpp  module.hpp  module_impl.hpp  serialization.hpp  strided_iterator.hpp  utilities.hpp
include/malt/detail/: component_mgr.hpp  component_mgr_impl.hpp  entity_info.hpp  game.hpp  game_impl.hpp  malt_reflect_impl.hpp
src/: component.cpp  engine.cpp  entity.cpp  utilities.cpp
tests/: reflection_tests.cpp
